# Proyecto_Programacion

./: CMakeLists.txt  barco.cpp  barco.h  jugador.cpp  jugador.h  jugadorH.cpp  jugadorH.h  jugadorX.cpp  jugadorX.h  main.cpp  tablero.cpp  tablero.h
