cmake_minimum_required(VERSION 3.25)
project(TRABAJO_FINAL_NAVAL_MATEOS_EGUIA_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(TRABAJO_FINAL_NAVAL_MATEOS_EGUIA_cpp main.cpp barco.h barco.cpp jugador.h jugador.h jugador.h jugador.cpp jugador.cpp tablero.h tablero.h tablero.h tablero.cpp jugadorH.h jugadorH.h jugadorX.h jugadorX.h jugadorX.cpp)
